<resources>
    <string name="app_name">Bill Please</string>
    <string name="amount">Amount</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="enter_amount">Enter amount:</string>
    <string name="split">SPLIT</string>
    <string name="reset">RESET</string>
    <string name="no_gst">NO GST</string>
    <string name="cash">Cash</string>
    <string name="paynow">Paynow</string>
    <string name="no_svs">No SVS</string>
    <string name="svs">SVS</string>
    <string name="gst">GST</string>
    <string name="num_of_pax">Num of pax:</string>
    <string name="enter_num_of_pax">Enter num of pax:</string>
    <string name="discount">Discount(%)</string>
</resources>